--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -169,7 +169,7 @@
 
 </div> -->
 
-<app-error></app-error>
+<app-alert></app-alert>
 <router-outlet></router-outlet>
 
 <footer>This is a footer</footer>
